--- a/core/templates/_navbar.html
+++ b/core/templates/_navbar.html
@@ -12,7 +12,7 @@
     {% endblock %}
 
     <a class="navbar-brand" href="/">
-      <i class="fa-solid fa-wave-square me-2"></i>SeisWebLog
+      <i class="fa-solid fa-wave-square me-2"></i>SeisWebLog v{{ APP_VERSION }}
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNav">
