--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -12,8 +12,12 @@
   <link rel="stylesheet" href="{% static 'baseproject/css/app.css' %}">
   <link rel="stylesheet" href="{% static 'baseproject/css/black_box_config_modal.css' %}">
   <link rel="stylesheet" href="{% static 'baseproject/css/rov_upload_modal.css' %}">
- <link rel="stylesheet" href="{% static 'baseproject/css/side_bar_menu.css' %}">
+  <link rel="stylesheet" href="{% static 'baseproject/css/side_bar_menu.css' %}">
+  <link rel="stylesheet" href="{% static 'baseproject/css/sv_map_pills.css' %}">
+  
+
   <link href="https://cdn.bokeh.org/bokeh/release/bokeh-3.8.2.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'baseproject/css/bokeh_dark_mode.css' %}?v=3">
   {% block extra_head %}{% endblock %}
 </head>
 <body class="bg-dark">
