--- a/rov/templates/rov/rovpage.html
+++ b/rov/templates/rov/rovpage.html
@@ -134,7 +134,7 @@
             </div>
             <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade show active" id="pills-survey" role="tabpanel" aria-labelledby="pills-survey-tab">
-
+                        {% include "rov/partials/sv_map_tabs.html" %}
                   </div>
                   <div class="tab-pane fade" id="pills-bbox" role="tabpanel" aria-labelledby="pills-bbox-tab">
                       {% include "rov/cards/gnss_qc_card.html" %}
