--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -44,7 +44,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   
   <script src="https://unpkg.com/lottie-web/build/player/lottie.min.js"></script>
-  
+  <script src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
+
   <script
     src="https://cdn.bokeh.org/bokeh/release/bokeh-3.8.2.min.js">
   </script>
